data/derived/sp14/progs/unify/prog2592.ml.out
Characters 165-191:
  let (_, res) = List.fold_left f base args in
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type (unit * unit) list
       but an expression was expected of type 'a * 'b
